# Projekt_SDiZO

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  main.cpp
heap/: Heap.cpp  Heap.h
iofiles/: output.txt  structure.txt
results/heap/: heap100.txt  heap1000000.txt  heap10000000.txt  heap3000000.txt  heap5000000.txt  heap7000000.txt  heap9000000.txt
results/list/: list100.txt  list1000000.txt  list10000000.txt  list3000000.txt  list5.txt  list5000000.txt  list7000000.txt  list9000000.txt
results/table/: table10.txt  table100.txt  table1000.txt  table10000.txt  table100000.txt  table1000000.txt  table10000000.txt  table3000000.txt  table500000.txt  table5000000.txt  table7000000.txt  table9000000.txt
results/tree/: tree100.txt  tree10000.txt  tree1000000.txt  tree10000000.txt  tree250000.txt  tree3000000.txt  tree500000.txt  tree5000000.txt
structures/: Heap.h
structures/heap/: Heap.cpp  Heap.h
structures/list/: List.cpp  List.h  ListElement.cpp  ListElement.h
structures/table/: Table.cpp  Table.h
structures/tree/: Node.cpp  Node.h  Tree.cpp  Tree.h
testers/: AutomaticTester.cpp  AutomaticTester.h  Tester.cpp  Tester.h
utils/: FileRandomizer.cpp  FileRandomizer.h  Timer.cpp  Timer.h
